@@ -5,18 +5,6 @@ module HaveAPI::CLI::Commands
     desc 'Block until the action is finished'
 
     include HaveAPI::CLI::ActionState
-    
-    def options(opts)
-      @opts = {}
-
-      opts.on(
-          '--timeout SEC',
-          Float,
-          'Fail when the action does not finish within the timeout'
-      ) do |v|
-        @opts[:timeout] = v.to_f
-      end
-    end
 
     def exec(args)
       if args.size < 1
@@ -28,7 +16,7 @@ module HaveAPI::CLI::Commands
           @global_opts[:version],
           @api.action_state.actions[:poll],
           args.first.to_i,
-          timeout: @opts[:timeout],
+          timeout: @global_opts[:timeout],
       )
 
       if ret.nil?
