@@ -1,5 +1,6 @@
 - Client.initialize takes two arguments: url and options
 - Authenticate even for actions that do not require it
+- New CLI options --[no-]block and --timeout
 
 * Tue Oct 18 2016 - version 0.6.0
 - No changes
